syntax = "proto3";
package cosmos.accumulator;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmos/accumulator/params.proto";
import "cosmos/accumulator/admin.proto";
// this line is used by starport scaffolding # proto/tx/import
// this line is used by starport scaffolding # 1

option go_package = "github.com/cosmos/cosmos-sdk/x/accumulator/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/cosmos/accumulator/params";
  }

  rpc GetAdmins(QueryAdmins) returns (QueryAdminsResponse) {
    option (google.api.http).get = "/cosmos/accumulator/admins";
  }
  // this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryAdmins {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAdminsResponse {
  repeated Admin admins = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
